MDEV-33747: Optimization of (SELECT) IN (SELECT ...) executes subquery at prepare stage

Make IN->EXISTS rewrite not to compute constant left expression if it
has a subquery in it.