sql/item_cmpfunc.cc
@@ -1363,7 +1363,13 @@ bool Item_in_optimizer::fix_left(THD *thd)
   copy_with_sum_func(args[0]);
   with_param= args[0]->with_param || args[1]->with_param;
   with_field= args[0]->with_field;
-  if ((const_item_cache= args[0]->const_item()))
+
+  /*
+    If left expression is a constant, cache its value.
+    But don't do that if that involves computing a subquery, as we are in a
+    prepare-phase rewrite.
+  */
+  if ((const_item_cache= args[0]->const_item()) && !args[0]->with_subquery())
   {
     cache->store(args[0]);
     cache->cache_value();
